--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
